[package]
name = "normalized-hasher"
version = "0.2.0-SNAPSHOT"
description = "Create cross-platform hashes of text files."
readme = "README.md"
categories = ["algorithms", "command-line-utilities"]
keywords = ["cli", "hash", "newline"]

authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
include.workspace = true

[dependencies]
base16ct = { version = "0.2.0", features = ["alloc"] }
clap = { version = "4.1.4", features = ["derive"] }
sha2 = "0.10.6"

[dev-dependencies]
tempfile = "3.7.0"

# --- Workspace configuration ---

[workspace.package]
authors = ["Florian Gamböck <mail@floga.de>"]
edition = "2021"
repository = "https://github.com/FloGa/normalized-hasher"
license = "MIT"

include = ["src/**/*", "LICENSE", "README.md"]
