[package]
name = "normalized-hasher"
version = "0.2.0-RC"
description = "Create cross-platform hashes of text files."
readme = "README.md"
categories = ["algorithms", "command-line-utilities"]
keywords = ["cli", "hash", "newline"]

authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
include.workspace = true

[dependencies]
normalized-hash.workspace = true

clap.workspace = true

# --- Workspace configuration ---

[workspace.package]
authors = ["Florian Gamböck <mail@floga.de>"]
edition = "2021"
repository = "https://github.com/FloGa/normalized-hasher"
license = "MIT"

include = ["src/**/*", "LICENSE", "README.md"]

[workspace.dependencies]

# Internal dependencies

normalized-hash = { version = "0.1.0-RC", path = "crates/normalized-hash" }

# Runtime dependencies

base16ct = { version = "0.2.0", features = ["alloc"] }
clap = { version = "4.3.22", features = ["derive"] }
sha2 = "0.10.6"

# Development / test dependencies

tempfile = "3.7.0"
